--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,3 +1,5 @@
+@import "./theme.module.scss";
+
 .header {
   display: flex;
   position: fixed;
@@ -5,9 +7,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  height: var(--header-height);
+  height: $header-height;
   width: 100%;
-  background-color: var(--material-theme--syslightbackground);
+  background-color: $material-theme--syslightbackground;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
