--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,3 @@
-@import "./theme.module.scss";
-
 .header {
   display: flex;
   position: fixed;
@@ -7,9 +5,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  height: $header-height;
+  height: var(--header-height);
   width: 100%;
-  background-color: $material-theme--syslightbackground;
+  background-color: var(--material-theme--syslightbackground);
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
